--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,11 +1,19 @@
 [package]
 edition = "2021"
+license = 'Apache-2.0'
 name = "wenhu"
-version = "0.1.0"
+version = "0.1.2"
+
+[build-dependencies]
+chrono = "0.4.40"
 
 [dependencies]
 anyhow = "1.0.96" 
-clap = {version = "4.5.1", features = ["derive", "color"]}# 命令行支持      
-colored = "2.1.0" # 颜色库
+clap = {version = "4.5.1", features = ["derive", "color"]}# 命令行支持              
+colored = "3.0.0" # 颜色库
+include_dir = "0.7.4" 
 serde = {version = "1.0.218", features = ["derive"]} 
-serde_yaml = "0.9.34"
+serde_json = "1.0.139" 
+serde_yaml = "0.9.34" 
+sys-locale = "0.3.2" 
+toml = "0.8.20"
